--- a/CRMPhone/Dialogs/RequestDialog.xaml
+++ b/CRMPhone/Dialogs/RequestDialog.xaml
@@ -26,14 +26,22 @@
             <ColumnDefinition Width="964"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Expander Grid.Row="0" Grid.Column="1" Grid.RowSpan="4" IsExpanded="{Binding IsExpanded}">
-            <Grid>
-                <DockPanel>
-                    <RichTextBox Name="FlowInfo" Margin="1" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible">
-                    </RichTextBox>
-                </DockPanel>
-            </Grid>
-        </Expander>
+        <!--<Expander Grid.Row="0" Grid.Column="1" Grid.RowSpan="4"  IsExpanded="{Binding IsExpanded}">-->
+        <Grid Grid.Row="0" Grid.Column="1" Grid.RowSpan="4" Visibility="{Binding AdditionInfoVisibility}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="250"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <DockPanel Grid.Row="0">
+                <RichTextBox Name="InfoForAll" Margin="1" IsReadOnly="True" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible">
+                </RichTextBox>
+            </DockPanel>
+            <DockPanel Grid.Row="1">
+                <RichTextBox Name="FlowInfo" Margin="1" IsReadOnly="True" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible">
+                </RichTextBox>
+            </DockPanel>
+        </Grid>
+        <!--</Expander>-->
         <StackPanel Grid.Row="0" Grid.Column="0">
             <WrapPanel>
                 <WrapPanel Margin="5"  >
